@@ -270,6 +270,7 @@
             <configuration>
               <additionalJOptions>
                 <additionalJOption>--add-modules=jdk.unsupported</additionalJOption>
+                <additionalJOption>--add-modules=java.base</additionalJOption>
               </additionalJOptions>
               <excludePackageNames>com.thoughtworks.xstream.core.util</excludePackageNames>
             </configuration>
@@ -296,11 +297,8 @@
               <execution>
                 <id>compile-jdk16</id>
                 <configuration>
-                  <release>16</release>
-                  <testExcludes combine.self="override" />
-                  <testIncludes>
-                    <include>**/Record**</include>
-                  </testIncludes>
+                  <target>16</target>
+                  <source>16</source>
                 </configuration>
                 <goals>
                   <goal>testCompile</goal>
@@ -330,11 +328,8 @@
               <execution>
                 <id>compile-jdk15</id>
                 <configuration>
-                  <release>15</release>
-                  <testExcludes combine.self="override" />
-                  <testIncludes>
-                    <include>**/Record**</include>
-                  </testIncludes>
+                  <target>15</target>
+                  <source>15</source>
                   <compilerArgs>
                     <arg>--enable-preview</arg>
                   </compilerArgs>
@@ -381,9 +376,16 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <configuration>
+              <target>11</target>
+              <source>11</source>
               <compilerArgs>
                 <arg>-XDignore.symbol.file</arg>
+                <arg>--add-exports</arg>
+                <arg>java.base/jdk.internal.misc=ALL-UNNAMED</arg>
               </compilerArgs>
+              <testExcludes>
+                <exclude>**/Record**</exclude>
+              </testExcludes>
             </configuration>
           </plugin>
           <plugin>
@@ -449,6 +451,7 @@
       --add-opens java.base/java.lang.ref=ALL-UNNAMED
       --add-opens java.base/java.lang.reflect=ALL-UNNAMED
       --add-opens java.base/java.text=ALL-UNNAMED
+      --add-opens java.base/jdk.internal.misc=ALL-UNNAMED
       --add-opens java.base/javax.security.auth.x500=ALL-UNNAMED
       --add-opens java.base/sun.util.calendar=ALL-UNNAMED
       --add-opens java.desktop/java.beans=ALL-UNNAMED
